--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,14 @@
     "python.testing.pytestArgs": [
         "Codes"
     ],
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true,
-    "python.analysis.typeCheckingMode": "basic"
+    "python.testing.unittestEnabled": true,
+    "python.testing.pytestEnabled": false,
+    "python.analysis.typeCheckingMode": "basic",
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        "./Codes",
+        "-p",
+        "*_test.py"
+    ]
 }
